test/good/error.lat
int main() {
    printInt(1);
    callError();
    printInt(0);
}

void callError() {
    error();
    printInt(0);
}
