test/bad/neg.lat
int main() {
    boolean b;
    -b;
}
